Closed Bug 2051614 Opened 18 days ago Closed 11 days ago

Happy Eyeballs doesn't fall back to native DNS when TRR-resolved addresses all fail to connect

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
154 Branch
Tracking Status
firefox154 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(2 files)

In the legacy connection path, nsSocketTransport::RecoverFromError re-resolves the host with TRR disabled (DISABLE_TRR | BYPASS_CACHE | REFRESH_CACHE) and retries once all TRR-resolved addresses have failed to connect, except in TRR_ONLY mode. Happy Eyeballs, by contrast, resolves once through the engine and then hands each connection a single pre-resolved address, so that fallback never runs — the engine simply reports Output::Failed with no native re-resolution.

Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Pushed by kjang@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/937e91c5a255 https://hg.mozilla.org/integration/autoland/rev/53bceef0de1b Retry Happy Eyeballs with TRR disabled when TRR-resolved addresses fail to connect, r=necko-reviewers,valentin https://github.com/mozilla-firefox/firefox/commit/aad2f915f87d https://hg.mozilla.org/integration/autoland/rev/cdc5d8eccd06 Reset stale IP family preference on the winning family under Happy Eyeballs, r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 11 days ago
Resolution: --- → FIXED
Target Milestone: --- → 154 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: