Bug 2051614 -  Reset stale IP family preference on the winning family under Happy Eyeballs, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D309816